--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'http://localhost:3000/auth';
+        const API_BASE_URL = 'http://localhost/auth';
 
         // Register
         document.getElementById('registerForm').addEventListener('submit', async (e) => {
@@ -188,7 +188,7 @@
 
         // --- OAuth Login logic ---
         window.loginWithGoogle = function() {
-            window.location.href = 'http://localhost:3000/auth/google';
+            window.location.href = 'http://localhost/auth/google';
         }
 
         // Функция для отображения токенов после OAuth
